tests/snapshots/snapshots__receipt-row.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
✓ Edited summary.md                    Done 4 s 1.2k $0.01 →
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..38 fg=Foreground bg=Background
r0 c38..39 bg=Background
r0 c39..43 fg=Muted bg=Background
r0 c43..44 bg=Background
r0 c44..47 fg=Foreground bg=Background
r0 c47..48 bg=Background
r0 c48..52 fg=Foreground bg=Background
r0 c52..53 bg=Background
r0 c53..58 fg=Foreground bg=Background
r0 c58..59 bg=Background
r0 c59..60 fg=Muted bg=Background

== dark-graphite
✓ Edited summary.md                    Done 4 s 1.2k $0.01 →
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..38 fg=Foreground bg=Background
r0 c38..39 bg=Background
r0 c39..43 fg=Muted bg=Background
r0 c43..44 bg=Background
r0 c44..47 fg=Foreground bg=Background
r0 c47..48 bg=Background
r0 c48..52 fg=Foreground bg=Background
r0 c52..53 bg=Background
r0 c53..58 fg=Foreground bg=Background
r0 c58..59 bg=Background
r0 c59..60 fg=Muted bg=Background

== light-truecolor
✓ Edited summary.md                    Done 4 s 1.2k $0.01 →
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..38 fg=Foreground bg=Background
r0 c38..39 bg=Background
r0 c39..43 fg=Muted bg=Background
r0 c43..44 bg=Background
r0 c44..47 fg=Foreground bg=Background
r0 c47..48 bg=Background
r0 c48..52 fg=Foreground bg=Background
r0 c52..53 bg=Background
r0 c53..58 fg=Foreground bg=Background
r0 c58..59 bg=Background
r0 c59..60 fg=Muted bg=Background

== dark-256
✓ Edited summary.md                    Done 4 s 1.2k $0.01 →
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..38 fg=Foreground bg=Background
r0 c38..39 bg=Background
r0 c39..43 fg=Muted bg=Background
r0 c43..44 bg=Background
r0 c44..47 fg=Foreground bg=Background
r0 c47..48 bg=Background
r0 c48..52 fg=Foreground bg=Background
r0 c52..53 bg=Background
r0 c53..58 fg=Foreground bg=Background
r0 c58..59 bg=Background
r0 c59..60 fg=Muted bg=Background

== light-256
✓ Edited summary.md                    Done 4 s 1.2k $0.01 →
---
r0 c0..1 fg=Live bg=Background|Surface
r0 c1..2 bg=Background|Surface
r0 c2..38 fg=Foreground bg=Background|Surface
r0 c38..39 bg=Background|Surface
r0 c39..43 fg=Muted bg=Background|Surface
r0 c43..44 bg=Background|Surface
r0 c44..47 fg=Foreground bg=Background|Surface
r0 c47..48 bg=Background|Surface
r0 c48..52 fg=Foreground bg=Background|Surface
r0 c52..53 bg=Background|Surface
r0 c53..58 fg=Foreground bg=Background|Surface
r0 c58..59 bg=Background|Surface
r0 c59..60 fg=Muted bg=Background|Surface

== ansi-16
✓ Edited summary.md                    Done 4 s 1.2k $0.01 →
---
r0 c0..1 fg=Live
r0 c39..43 dim
r0 c59..60 dim

== unknown-ground
✓ Edited summary.md                    Done 4 s 1.2k $0.01 →
---
r0 c0..1 fg=Live
r0 c39..43 dim
r0 c59..60 dim

== no-color
✓ Edited summary.md                    Done 4 s 1.2k $0.01 →
---
r0 c39..43 dim
r0 c59..60 dim

== ascii
Y Edited summary.md                    Done 4 s 1.2k $0.01 >
---
r0 c39..43 dim
r0 c59..60 dim
